--- a/css/style.css
+++ b/css/style.css
@@ -469,7 +469,7 @@ footer>p {
 @media (width <=500px) {
     .menu {
         width: 0px;
-        height: 80vh;
+        height: calc(100vh - 90px);
         position: absolute;
         top: 90px;
         padding: 10px 0;
@@ -478,12 +478,13 @@ footer>p {
         z-index: 100000;
         visibility: hidden;
         overflow: hidden;
-        transition: 0.5s ease-in-out;
+        transition: 0.4s ease-in-out;
     }
 
     .menu>ul {
         display: flex;
         flex-direction: column;
+        gap: 25px;
     }
 
     .menu-mobile {
